Finished swagger
